@@ -28,3 +28,4 @@ eZVlogin CHANGELOG
 + Fixed redirection to user/register in vlogin/login
 + Added support for inter server sso (when several servers run on same domain behind load balancer)
 + Synced vlogin with user module in 4.1, merging #14301 and #9275
++ Added cacheable vlogin/profile view for user profiles
